--- a/www/web/scss/pages/_home_blog.scss
+++ b/www/web/scss/pages/_home_blog.scss
@@ -48,6 +48,7 @@
       display: block;
       border-top: 1px solid #dddddd;
       padding: 15px;
+      font-size: 14px;
 
       span {
         transition: all 0.3s ease-in-out 0s;
@@ -56,9 +57,9 @@
       }
 
       &:hover {
-        color: darken(#0FA2CE, 10%);
+        color: darken($blog-color, 10%);
         span {
-          color: darken(#0FA2CE, 10%);
+          color: darken($blog-color, 10%);
           padding-left: 5px;
         }
       }
