Add correct favicon

--- a/www/app/Resources/views/base.html.twig
+++ b/www/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
 
     <title>{% block page_title %}Wanjee - Web artisan{% endblock %}</title>
     <meta name="description" content="{% block page_description %}{% endblock %}">
+    <link rel="icon" href="{{ asset('favicon.png') }}" type="image/png" />
 
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/vendors.min.css') }}">
