Add some CTA on Shuwee page

--- a/www/app/Resources/views/default/shuwee.html.twig
+++ b/www/app/Resources/views/default/shuwee.html.twig
@@ -39,4 +39,13 @@
             {% endfor %}
         </div>
     </section>
+
+    <section class="slide cta">
+        <div class="container">
+            <div class="actions-wrapper">
+                <a class="btn btn-shuwee" href="https://github.com/wanjee/ShuweeAdminBundle" target="_self"><span class="icon icon-github"></span> View on Github</a>
+                <a class="btn btn-shuwee" href="https://github.com/wanjee/ShuweeAdminBundle/blob/master/doc/index.md" target="_self"><span class="icon icon-github"></span> View documentation</a>
+            </div>
+        </div>
+    </section>
 {% endblock %}
