Fix color of reordered slides on HP; Fix styling of post teasers read more link

--- a/www/app/Resources/views/post/teaser.html.twig
+++ b/www/app/Resources/views/post/teaser.html.twig
@@ -22,5 +22,5 @@
             </div>
         </div>
     </div>
-    <a href="{{ postUrl }}" class="link link-blog">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
+    <a href="{{ postUrl }}" class="link link-blog text-right">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
 </article>
