--- a/www/web/scss/pages/_home_blog.scss
+++ b/www/web/scss/pages/_home_blog.scss
@@ -1,5 +1,5 @@
 #blog {
-  background-color: #F9F9F9;
+  background-color: #FFFFFF;
 
   h1 {
     color: $blog-color;
@@ -46,7 +46,6 @@
 
     a.link {
       display: block;
-      border-top: 1px solid #dddddd;
       padding: 15px;
       font-size: 14px;
 
