--- a/www/app/Resources/views/post/details.html.twig
+++ b/www/app/Resources/views/post/details.html.twig
@@ -2,6 +2,19 @@
 
 {% block body_class %}post-details{% endblock %}
 
+{% block page_title %}{{ post.title }}, by Wanjee{% endblock %}
+
+{% block meta %}
+    <meta name="description" content="{{ post.summary | e('html_attr')  }}">
+    <meta property="og:title" content="{{ post.title | e('html_attr') }}" />
+    <meta property="og:description" content="{{ post.summary | e('html_attr') }}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="{{ url('post_details', {'slug': post.slug}) }}" />
+    <meta property="og:image" content="{{ absolute_url(asset(post.webPath)) }})" />
+    <meta property="article:published_time" content="{{ post.publishedAt | date('c') }}" />
+    <meta property="article:author" content="Wanjee" />
+{% endblock %}
+
 {% block content %}
     {% set header_vars = {
         title : post.title,
@@ -34,6 +47,9 @@
 
                 <div class="body">
                     {{ post.content | md2html }}
+                </div>
+                <div class="social-share text-center">
+                    <div class="fb-like" data-href="{{ url('post_details', {'slug': post.slug}) }}" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
                 </div>
             </article>
         </div>
