--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -2,6 +2,15 @@
 
 {% block body_class %}home{% endblock %}
 
+{% block meta %}
+    <meta name="description" content="A web artisan blog about PHP development">
+    <meta property="og:title" content="Wanjee - Web artisan" />
+    <meta property="og:description" content="A web artisan blog about PHP development">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ url('homepage') }}" />
+    <meta property="og:image" content="" />
+{% endblock %}
+
 {% block content %}
     <header id="hero" data-navbar-style="hero">
         <div class="container">
@@ -11,12 +20,13 @@
                         <h1>Wanjee</h1>
                         <h2>Web artisan</h2>
                         <div class="actions-wrapper">
-                            <a class="btn btn-about" href="#about" target="_self">Get to know me</a>
-                            <a class="btn btn-blog" href="#blog" target="_self">Blog</a>
+                            <a class="btn btn-about" href="#about" target="_self">My profile</a>
+                            <a class="btn btn-blog" href="#blog" target="_self">My blog</a>
                         </div>
                     </div>
                 </div>
             </div>
+            <a class="icon-scroll" href="#about"></a>
         </div>
     </header>
 
