--- a/www/web/css/app/styles.css
+++ b/www/web/css/app/styles.css
@@ -461,6 +461,28 @@ body.home .page section.slide {
       #hero .row > div .actions-wrapper {
         text-align: center;
         margin: 80px 0 40px 0; }
+  #hero .icon-scroll,
+  #hero .icon-scroll:before {
+    position: absolute;
+    left: 50%; }
+  #hero .icon-scroll {
+    width: 40px;
+    height: 70px;
+    margin-left: -20px;
+    margin-top: -35px;
+    bottom: 45px;
+    border-radius: 25px; }
+  #hero .icon-scroll:before {
+    content: '';
+    width: 8px;
+    height: 8px;
+    background: #fff;
+    margin-left: -4px;
+    top: 8px;
+    border-radius: 4px;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-name: scroll; }
 
 /**
  * Animations
@@ -508,6 +530,12 @@ body.home .page section.slide {
     opacity: 0; }
   100% {
     opacity: 1; } }
+@keyframes scroll {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0;
+    transform: translateY(46px); } }
 #simplicity {
   background-color: #FFFFFF; }
 
