--- a/www/web/scss/pages/_home_hero.scss
+++ b/www/web/scss/pages/_home_hero.scss
@@ -43,7 +43,38 @@
       }
     }
   }
+
+  .icon-scroll,
+  .icon-scroll:before {
+    position: absolute;
+    left: 50%;
+  }
+
+  .icon-scroll {
+    width: 40px;
+    height: 70px;
+    margin-left: -20px;
+    margin-top: -35px;
+    bottom: 45px;
+    border-radius: 25px;
+  }
+
+  .icon-scroll:before {
+    content: '';
+    width: 8px;
+    height: 8px;
+    background: #fff;
+    margin-left: -4px;
+    top: 8px;
+    border-radius: 4px;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-name: scroll;
+  }
 }
+
+
+
 
 /**
  * Animations
@@ -111,5 +142,15 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(46px);
   }
 }
