--- a/www/app/Resources/views/block/teaser.html.twig
+++ b/www/app/Resources/views/block/teaser.html.twig
@@ -1,11 +1,17 @@
 <div class="row feature">
-    <div class="col-xs-12 col-md-6 description{% if text_position == 'right' %} col-md-push-6 {% endif %}">
-        <h2>{{ block.title }}</h2>
-        {{ block.content | md2html }}
-
-    </div>
-    <figure class="col-xs-12 col-md-6{% if text_position == 'right' %} col-md-pull-6 {% endif %}">
-        <img src="http://placehold.it/670x380">
-        <figcaption class="figure-caption">{{ block.caption }}</figcaption>
-    </figure>
+    {% if block.webPath is not empty %}
+        <div class="col-xs-12 col-md-6 description{% if text_position == 'right' %} col-md-push-6 {% endif %}">
+            <h2>{{ block.title }}</h2>
+            {{ block.content | md2html }}
+        </div>
+        <figure class="col-xs-12 col-md-6{% if text_position == 'right' %} col-md-pull-6 {% endif %}">
+            <img src="{{ block.webPath | imagine_filter('block_figure') }}">
+            <figcaption class="figure-caption">{{ block.caption }}</figcaption>
+        </figure>
+    {% else %}
+        <div class="col-xs-12 col-md-12 description no-figure">
+            <h2>{{ block.title }}</h2>
+            {{ block.content | md2html }}
+        </div>
+    {% endif %}
 </div>
