--- a/www/web/scss/pages/_home_blog.scss
+++ b/www/web/scss/pages/_home_blog.scss
@@ -16,7 +16,7 @@
     border: 1px solid #dddddd;
     border-radius: 4px;
     text-align: left;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
 
     .img-container {
 
