--- a/www/web/scss/_variables.scss
+++ b/www/web/scss/_variables.scss
@@ -1,3 +1,6 @@
-$about-color: #9c8481;
-$blog-color: #98aeb6;
-$shuwee-color: #0FA2CE;
+$about-color: #594F4F;
+$blog-color: #547980;
+$shuwee-color: #45ADA8;
+
+
+// http://www.colourlovers.com/palette/443995/i_demand_a_pancake
