Add link to ShuweeAdminBundle on SensioLabsInsights

--- a/www/app/Resources/views/default/shuwee.html.twig
+++ b/www/app/Resources/views/default/shuwee.html.twig
@@ -54,10 +54,10 @@
 
     <section class="slide cta">
         <div class="container">
-            <div class="actions-wrapper">
-                <a class="btn btn-shuwee" href="https://github.com/wanjee/ShuweeAdminBundle" target="_self"><span class="icon icon-github"></span> View on Github</a>
-                <a class="btn btn-shuwee" href="https://github.com/wanjee/ShuweeAdminBundle/blob/master/doc/index.md" target="_self"><span class="icon icon-github"></span> View documentation</a>
-            </div>
+            <a class="btn btn-shuwee" href="https://github.com/wanjee/ShuweeAdminBundle" target="_self"><span class="icon icon-github"></span> View on Github</a>
+            <a class="btn btn-shuwee" href="https://github.com/wanjee/ShuweeAdminBundle/blob/master/doc/index.md" target="_self"><span class="icon icon-github"></span> View documentation</a>
+            <a class="btn btn-shuwee" href="https://insight.sensiolabs.com/projects/d562cbf8-b741-42fe-a8de-2f040d518873" target="_self">SensioLabsInsights</a>
         </div>
     </section>
+
 {% endblock %}
