--- a/www/web/css/app/styles.css
+++ b/www/web/css/app/styles.css
@@ -65,45 +65,45 @@ a {
       text-decoration: none;
       outline: none; }
   a.link-about {
-    color: #594F4F; }
+    color: #774F38; }
     a.link-about:hover {
-      color: #3e3737; }
+      color: #543828; }
     a.link-about:active {
-      color: #231f1f; }
+      color: #322117; }
     a.link-about:focus {
-      color: #231f1f; }
+      color: #322117; }
   a.btn-about {
     color: #FFFFFF;
-    background-color: #594F4F; }
+    background-color: #774F38; }
     a.btn-about:hover {
       color: #FFFFFF;
-      background-color: #3e3737; }
+      background-color: #543828; }
     a.btn-about:active {
       color: #FFFFFF;
-      background-color: #231f1f; }
+      background-color: #322117; }
     a.btn-about:focus {
       color: #FFFFFF;
-      background-color: #231f1f; }
+      background-color: #322117; }
   a.link-blog {
-    color: #547980; }
+    color: #E08E79; }
     a.link-blog:hover {
-      color: #405c61; }
+      color: #d66b50; }
     a.link-blog:active {
-      color: #2c3f42; }
+      color: #c54d2e; }
     a.link-blog:focus {
-      color: #2c3f42; }
+      color: #c54d2e; }
   a.btn-blog {
-    background-color: #547980;
+    background-color: #E08E79;
     color: #FFFFFF; }
     a.btn-blog:hover {
-      background-color: #405c61;
+      background-color: #d66b50;
       color: #FFFFFF; }
     a.btn-blog:active {
       color: #FFFFFF;
-      background-color: #2c3f42; }
+      background-color: #c54d2e; }
     a.btn-blog:focus {
       color: #FFFFFF;
-      background-color: #2c3f42; }
+      background-color: #c54d2e; }
   a.link-shuwee {
     color: #45ADA8; }
     a.link-shuwee:hover {
@@ -381,7 +381,7 @@ body.home .page section.slide {
   background-color: #F9F9F9;
   text-align: center; }
   #about h1 {
-    color: #594F4F; }
+    color: #774F38; }
   #about ul.social li {
     padding: 50px; }
     #about ul.social li a span.icon {
@@ -396,7 +396,7 @@ body.home .page section.slide {
 #blog {
   background-color: #FFFFFF; }
   #blog h1 {
-    color: #547980; }
+    color: #E08E79; }
   #blog .row {
     margin-top: 50px;
     margin-bottom: 50px; }
@@ -431,9 +431,9 @@ body.home .page section.slide {
         color: #ffffff;
         padding-left: 0; }
       #blog .post a.link:hover {
-        color: #405c61; }
+        color: #d66b50; }
         #blog .post a.link:hover span {
-          color: #405c61;
+          color: #d66b50;
           padding-left: 5px; }
 
 #hero {
@@ -561,13 +561,13 @@ body.home .page section.slide {
     background: #FFFFFF no-repeat scroll center center / contain;
     height: 300px; }
   .post-details .post a {
-    color: #547980; }
+    color: #E08E79; }
     .post-details .post a:hover {
-      color: #405c61; }
+      color: #d66b50; }
     .post-details .post a:active {
-      color: #2c3f42; }
+      color: #c54d2e; }
     .post-details .post a:focus {
-      color: #2c3f42; }
+      color: #c54d2e; }
   .post-details .post p,
   .post-details .post pre,
   .post-details .post blockquote,
@@ -581,10 +581,10 @@ body.home .page section.slide {
   .post-list article .meta {
     margin: 10px 0; }
 .post-list .pagination > li > a {
-  color: #547980; }
+  color: #E08E79; }
 .post-list .pagination > .active > span {
-  border-color: #547980;
-  background-color: #547980; }
+  border-color: #E08E79;
+  background-color: #E08E79; }
 
 body.shuwee {
   background-color: #F9F9F9; }
