Remove trailing dot in subheadings

--- a/www/app/Resources/views/default/shuwee.html.twig
+++ b/www/app/Resources/views/default/shuwee.html.twig
@@ -17,7 +17,7 @@
 {% block content %}
     {% set header_vars = {
         title: 'Shuwee',
-        subheading: 'Stupidly simple administration for Symfony.',
+        subheading: 'Stupidly simple administration for Symfony',
         image: asset('img/shuwee.jpg')
     } %}
 
