--- a/www/app/Resources/views/post/index.html.twig
+++ b/www/app/Resources/views/post/index.html.twig
@@ -16,7 +16,7 @@
 {% block content %}
     {% set header_vars = {
         title : 'To quality and beyond',
-        subheading : 'Quality focused small posts about PHP projects (Symfony, Drupal) and web development best practices in general.',
+        subheading : 'Quality focused small posts about PHP projects (Symfony, Drupal) and web development best practices in general',
         image: asset('img/blog.jpg')
     } %}
 
