--- a/www/web/css/app/styles.css
+++ b/www/web/css/app/styles.css
@@ -304,14 +304,13 @@ ul.social li.social_item {
     display: none; }
 
 .page > header {
-  height: 25vh;
+  height: 30vh;
   position: relative;
   background-color: #F9F9F9;
   color: #828B90; }
   .page > header.has-image {
     background: transparent no-repeat center center / cover;
-    color: #fff;
-    height: 30vh; }
+    color: #fff; }
     .page > header.has-image h1 {
       text-shadow: 1px 1px 5px #000; }
     .page > header.has-image .subheading {
@@ -349,6 +348,17 @@ ul.social li.social_item {
         margin-right: auto;
         padding: 0;
         font-size: 24px; }
+
+/* By section */
+.blog .page > header {
+  color: #E08E79; }
+  .blog .page > header.has-image {
+    color: #fff; }
+
+.shuwee .page > header {
+  color: #45ADA8; }
+  .shuwee .page > header.has-image {
+    color: #fff; }
 
 body > footer, .footer-push {
   height: 120px; }
