--- a/www/web/scss/components/_header.scss
+++ b/www/web/scss/components/_header.scss
@@ -1,5 +1,5 @@
 .page > header {
-  height: 25vh;
+  height: 30vh;
   position: relative;
 
   background-color: #F9F9F9;
@@ -8,7 +8,6 @@
   &.has-image {
     background: transparent no-repeat center center / cover;
     color: #fff;
-    height: 30vh;
 
     h1 {
       text-shadow: 1px 1px 5px #000;
@@ -62,6 +61,26 @@
         padding: 0;
         font-size: 24px;
       }
+    }
+  }
+}
+
+/* By section */
+.blog {
+  .page > header {
+    color: $blog-color;
+
+    &.has-image {
+      color: #fff;
+    }
+  }
+}
+
+.shuwee {
+  .page > header {
+    color: $shuwee-color;
+    &.has-image {
+      color: #fff;
     }
   }
 }
