Add blog section body class to post detail page

--- a/www/app/Resources/views/post/details.html.twig
+++ b/www/app/Resources/views/post/details.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body_class %}post-details{% endblock %}
+{% block body_class %}blog post-details{% endblock %}
 
 {% block page_title %}{{ post.title }}, by Wanjee{% endblock %}
 
