Rename template to a more explicit name

--- a/www/app/Resources/views/post/list.html.twig
+++ b/www/app/Resources/views/post/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body_class %}post-list{% endblock %}
+{% block body_class %}blog post-list{% endblock %}
 
 {% block page_title %}To quality & beyond, by Wanjee{% endblock %}
 
