Add Shuwee CTA on hero

--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -22,6 +22,7 @@
                         <div class="actions-wrapper">
                             <a class="btn btn-about" href="#about" target="_self">My profile</a>
                             <a class="btn btn-blog" href="#blog" target="_self">My blog</a>
+                            <a class="btn btn-shuwee" href="#shuwee" target="_self">My work</a>
                         </div>
                     </div>
                 </div>
