--- a/www/web/scss/_variables.scss
+++ b/www/web/scss/_variables.scss
@@ -1,6 +1,3 @@
 $about-color: #774F38;
-$blog-color: #E08E79;
+$blog-color: #DD9C2C;
 $shuwee-color: #45ADA8;
-
-
-// http://www.colourlovers.com/palette/443995/i_demand_a_pancake
