Limit width of posts display for improved readability

--- a/www/web/css/app/styles.css
+++ b/www/web/css/app/styles.css
@@ -571,7 +571,8 @@ body.home .page section.slide {
     display: none; }
   .post-details .post .img-container {
     background: #FFFFFF no-repeat scroll center center / contain;
-    height: 300px; }
+    height: 300px;
+    margin-top: 20px; }
   .post-details .post a {
     color: #DD9C2C; }
     .post-details .post a:hover {
