--- a/www/web/scss/pages/_post_details.scss
+++ b/www/web/scss/pages/_post_details.scss
@@ -16,6 +16,7 @@
     .img-container {
       background: #FFFFFF no-repeat scroll center center / contain;
       height: 300px;
+      margin-top: 20px;
     }
 
     a {
