--- a/www/app/Resources/views/post/details.html.twig
+++ b/www/app/Resources/views/post/details.html.twig
@@ -24,32 +24,31 @@
 
     <section class="container">
         <div class="row">
-            <div class="inner-nav col-md-10 col-md-offset-1">
+            <div class="inner-nav col-md-12">
                 <a href="{{ path('posts_index') }}" class="link-blog"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back to list</a>
             </div>
         </div>
         <div class="row">
-            <article class="post col-md-10 col-md-offset-1">
-                <h1>{{ post.title }}</h1>
-
-                <div class="meta">
+            <article class="post">
+                <div class="meta col-md-2">
                     <time datetime="{{ post.publishedAt | date('c') }}">{{ post.publishedAt | date('F j, Y') }}</time>
                 </div>
 
-                <div class="excerpt">
-                    {{ post.summary }}
-                </div>
+                <div class="article-inner col-md-8">
+                    <h1>{{ post.title }}</h1>
 
-                {% if post.webPath %}
-                <div class="img-container" style="background-image:url({{ asset(post.webPath) }});">
-                </div>
-                {% endif %}
+                    <div class="excerpt">
+                        {{ post.summary }}
+                    </div>
 
-                <div class="body">
-                    {{ post.content | md2html }}
-                </div>
-                <div class="social-share text-center">
-                    <div class="fb-like" data-href="{{ url('post_details', {'slug': post.slug}) }}" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+                    {% if post.webPath %}
+                    <div class="img-container" style="background-image:url({{ asset(post.webPath) }});">
+                    </div>
+                    {% endif %}
+
+                    <div class="body">
+                        {{ post.content | md2html }}
+                    </div>
                 </div>
             </article>
         </div>
