Add logo for home page Facebook share; Fix typo in url on details page

--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -8,7 +8,8 @@
     <meta property="og:description" content="A web artisan blog about PHP development">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ url('homepage') }}" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="{{ absolute_url(asset('img/wanjee_black_full_squared.png')) }})" />
+    <meta property="fb:app_id" content="1751081071781784" />
 {% endblock %}
 
 {% block content %}
