--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -47,7 +47,7 @@
 
                 <p>
                     Curious developer. PHP evangelist. Symfony2 fan.<br>
-                    Best practices guru. Team player. Open source enthousiast.<br>
+                    Best practices guru. Team player. Open source enthusiast.<br>
                 </p>
             </div>
             {% include 'partial/social.html.twig' %}
