Hide 3rd post on HP on medium width devices to avoid it to go on a new line

--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -63,7 +63,7 @@
             </div>
             <div id="post-promoted" class="row">
                 {% for post in posts %}
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6 col-lg-4 {% if loop.last %}hidden-md{% endif %}">
                         {% include 'post/teaser.html.twig' with {'post' : post} %}
                     </div>
                 {% endfor %}
