--- a/www/web/scss/pages/_post_details.scss
+++ b/www/web/scss/pages/_post_details.scss
@@ -14,10 +14,13 @@
       display: none;
     }
 
+    .excerpt {
+      margin-bottom: 20px;
+    }
+
     .img-container {
       background: #FFFFFF no-repeat scroll center center / contain;
       height: 300px;
-      margin-top: 20px;
     }
 
     a {
