--- a/app/Resources/views/partial/footer.html.twig
+++ b/app/Resources/views/partial/footer.html.twig
@@ -1,10 +1,10 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-xs-6 col-sm-6">
                 Made with <span class="icon icon-heart" alt="passion"></span> by <a class="page-scroll link-about" href="{{ path('homepage') }}#about">Wanjee</a>.
             </div>
-            <div class="col-sm-6 text-right">
+            <div class="col-xs-6 col-sm-6 text-right">
                 {% include 'partial/social.html.twig' %}
             </div>
         </div>
