--- a/web/scss/pages/_home_blog.scss
+++ b/web/scss/pages/_home_blog.scss
@@ -18,22 +18,35 @@
     text-align: left;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
 
-    .img-container {
-
-      a {
-        height: 200px;
-        width: 100%;
-        display: block;
-        background-color: #efefef;
-        background-size: cover;
-        background-position: center center;
-        background-repeat: no-repeat;
-      }
-    }
-
     .meta {
       padding: 15px;
-      text-align: right;
+      margin: 0;
+
+      > div {
+        padding: 0;
+
+        &.read-more {
+          text-align: right;
+
+          a.link {
+            font-size: 14px;
+
+            span {
+              transition: all 0.3s ease-in-out 0s;
+              color: #ffffff;
+              padding-left: 0;
+            }
+
+            &:hover {
+              color: darken($blog-color, 10%);
+              span {
+                color: darken($blog-color, 10%);
+                padding-left: 5px;
+              }
+            }
+          }
+        }
+      }
     }
 
     .copy-container {
@@ -41,26 +54,6 @@
 
       .excerpt {
         min-height: 100px;
-      }
-    }
-
-    a.link {
-      display: block;
-      padding: 15px;
-      font-size: 14px;
-
-      span {
-        transition: all 0.3s ease-in-out 0s;
-        color: #ffffff;
-        padding-left: 0;
-      }
-
-      &:hover {
-        color: darken($blog-color, 10%);
-        span {
-          color: darken($blog-color, 10%);
-          padding-left: 5px;
-        }
       }
     }
   }
